--- a/day07/ini_demo/conf.ini
+++ b/day07/ini_demo/conf.ini
@@ -1,14 +1,11 @@
-; mysql config
+# mysql config
 [mysql]
 address=10.20.30.40
 port=3306
 username=root
 password=rootroot
 
-         
-
-
- # redis config
+# redis config
 ;  [
 ; [  ]
 [redis]
